public/style/bittorrent.css
main {
  gap: 50px;
}

#inner a {
  color: var(--accent);
}

#inner span {
  font-family: monospace;
  font-size: 1.3em;
  font-weight: bold;
  background: #333;
  padding: 5px;
  padding-left: .5em;
  border-radius: 2px;
}

#expire {
  margin-top: 30px;
  font-size: .9em;
  color: #999;
}

